src/test/ui/consts/miri_unleashed/assoc_const.stderr
warning: skipping const checks
  --> $DIR/assoc_const.rs:12:31
   |
LL |     const F: u32 = (U::X, 42).1;
   |                               ^

error[E0080]: erroneous constant used
  --> $DIR/assoc_const.rs:29:13
   |
LL |     let y = <String as Bar<Vec<u32>, String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
